--- a/style.css
+++ b/style.css
@@ -84,14 +84,16 @@ main {
     padding-top: 10em;
 }
 
-.btn-div {
+.actions {
 
-    
     display: flex;
+    align-items: center;
     padding-left: 15em;
+    gap: 10em;
     margin-top: 4em;
-    padding-bottom: 2em;
-    
+    margin-bottom: 2em;
+
+
 }
 
 p, .btn {
@@ -108,7 +110,15 @@ p, .btn {
     border-radius: .25em;
     padding: .5em 1em;
     font-family: Arial, Helvetica, sans-serif;
-    /* text-shadow: 0 0 7px black; */
+    
+}
+
+#input-length {
+
+    height: 2.5em;
+    width: 15em;
+    background:#D5D4D8;
+    border-radius: .25em;
 }
 
 
@@ -132,13 +142,17 @@ p, .btn {
 
     display: flex;
     padding-left: 15em;
-    gap: 10em;
+    gap: 5em;
 }
 
 .password-1, .password-2 {
    
+    height: 4em;
+    width: 15em;
+    overflow: auto;
+    
+    
     padding: .25em 1.25em;
-    display: inline-block;
     margin-top: 3em;
 
     border-radius: .5em;
